samples/_failures_safe/1761531380_e98485_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a05a2ab.c: In function ‘main’:
./samples/SAFE/__tmp_0a05a2ab.c:143:29: error: missing terminating ' character
  143 |             line[len - 1] = '\0
      |                             ^~~
./samples/SAFE/__tmp_0a05a2ab.c:143:13: error: expected expression at end of input
  143 |             line[len - 1] = '\0
      |             ^~~~
./samples/SAFE/__tmp_0a05a2ab.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a05a2ab.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a05a2ab.c:143:13: error: expected declaration or statement at end of input
